# keyword

./: .gitignore  .python-version  Dockerfile  deploy.py  migration_init.sh  pyproject.toml  requirements.txt
.config/local_dev/: gunicorn.py  keyword.nginx  supervisord.conf
app/: 전략제안.py
app/analysis/: models.py  urls.py
app/analysis/apis/: __init__.py  related_keyword.py
app/config/: urls.py
app/config/settings/: __init__.py  base.py  local.py
app/keywords/: exceptions.py  models.py  urls.py
app/keywords/apis/: __init__.py  favorite.py  keyword.py
app/keywords/migrations/: 0001_initial.py  0002_initial.py
app/keywords/serializers/: __init__.py  favorite.py  keyword.py
app/members/: apis.py  exceptions.py  models.py  serializers.py  text.py  urls.py
app/members/apis/: user.py
app/members/migrations/: 0001_initial.py  0002_alter_user_naver_api_key.py
app/members/serializers/: user.py
